--- a/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
+++ b/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
@@ -30,6 +30,52 @@
                     <ColumnDefinition Width="50*" />
                 </Grid.ColumnDefinitions>
 
+                <Grid Margin="0"
+                      RowSpacing="0"
+                      Grid.Row="0"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"/>
+                        <ColumnDefinition Width="50*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Margin="0"
+                          RowSpacing="0"
+                          Grid.Row="0"
+                          Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50*" />
+                            <RowDefinition Height="50*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="20*"/>
+                            <ColumnDefinition Width="80*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Image Grid.Row="0"
+                               Grid.Column="0"
+                               Grid.RowSpan="2"
+                               HorizontalOptions="FillAndExpand"
+                               x:Name="VentDirectionImage"/>
+                        <Label Grid.Row="0"
+                               Grid.Column="1"
+                               x:Name="VentVitesseMoyenne"/>
+                        <Label Grid.Row="1"
+                               Grid.Column="1"
+                               x:Name="VentVitesseRafales"/>
+
+
+                    </Grid>
+                    
+
+                </Grid>
+
+
+
                 <Frame
                     Grid.Row="0"
                     Grid.Column="0"
