--- a/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
+++ b/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FontoyXamarin.Views.MeteoPage">
+             x:Class="FontoyXamarin.Views.MeteoPage" BackgroundColor="#ffffff">
     <ContentPage.Content>
         <Grid Margin="10" RowSpacing="0" ColumnSpacing="2">
             <Grid.RowDefinitions>
@@ -183,8 +183,9 @@
             <Frame 
                 Grid.Row="1"
                 Grid.Column="0"
-                OutlineColor="#CCCCCC"
+                OutlineColor="#ffffff"
                 CornerRadius="5"
+                HasShadow="False"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand"
                 Margin="0"/>
@@ -192,8 +193,9 @@
             <Frame 
                 Grid.Row="1"
                 Grid.Column="1"
-                OutlineColor="#CCCCCC"
+                OutlineColor="#ffffff"
                 CornerRadius="5"
+                HasShadow="False"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand"
                 Margin="0"/>
